--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ header .head{
   height: 150px;
   font-size: 56px;
   /* padding-right: 32px; */
+  max-width: 600px;
 }
 
 .head p{
@@ -155,11 +156,10 @@ section img{
 }
 
 
-/* 
-@media screen (min-width:1154px){
+@media (max-width: 1100px){
 
   .head h4{
-    font-size: 40px;
-  }
 
-} */
+    font-size: ;
+  }
+}
