--- a/src/App.css
+++ b/src/App.css
@@ -156,10 +156,30 @@ section img{
 }
 
 
-@media (max-width: 1100px){
+@media (max-width: 1220px){
 
+  .head{
+
+    display: flex;
+    flex-direction: column;
+  }
   .head h4{
 
-    font-size: ;
+    font-size: 40px;
   }
+  .head p{
+    font-size: 10px;
+  }
+
+  
+  section{
+
+    width: 100%;
+    background-color: #1a938a;
+    display: flex;
+    flex-direction: column;
+    padding: 100px 200px;
+    justify-content: space-between;
+  }
+
 }
